--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div>보내구 우리 자기한테 더 잘하도록 노력할께요</div>
     <div>사랑해요 우리 진희 1주년 축하해요</div>
   </div>
-  <div class="color_change">
+  <div class="color_change hidden">
     <form class="bg_form" action="">
       <button>배경색</button>
       <input type="color" class="bg_color">
